12-ingress/virtual-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: virtual1.com
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
  - host: virtual2.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80
